--- a/src/jeu/FXML.fxml
+++ b/src/jeu/FXML.fxml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jeu.FXMLController">
-    
+
+<AnchorPane id="AnchorPane" prefHeight="558.0" prefWidth="763.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="jeu.FXMLController">
+   <children>
+      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="692.0" layoutY="470.0" mnemonicParsing="false" text="Finir" />
+      <Button layoutX="51.0" layoutY="14.0" mnemonicParsing="false" text="&lt;-" />
+      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="Options" />
+      <FlowPane id="cartesJoueurPrincipal" layoutX="13.0" layoutY="423.0" prefHeight="119.0" prefWidth="646.0" style="-fx-background-color: gray;">
+         <effect>
+            <InnerShadow />
+         </effect>
+      </FlowPane>
+   </children>
 </AnchorPane>
