--- a/src/jeu/FXML.fxml
+++ b/src/jeu/FXML.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.InnerShadow?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -11,10 +12,13 @@
       <Button alignment="CENTER" contentDisplay="CENTER" layoutX="692.0" layoutY="470.0" mnemonicParsing="false" text="Finir" />
       <Button layoutX="51.0" layoutY="14.0" mnemonicParsing="false" text="&lt;-" />
       <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="Options" />
-      <FlowPane id="cartesJoueurPrincipal" layoutX="13.0" layoutY="423.0" prefHeight="119.0" prefWidth="646.0" style="-fx-background-color: gray;">
+      <FlowPane id="cartesJoueurPrincipal" alignment="BOTTOM_LEFT" layoutX="13.0" layoutY="423.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="119.0" prefWidth="646.0" style="-fx-background-color: gray;" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="100.0">
          <effect>
             <InnerShadow />
          </effect>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </FlowPane>
    </children>
 </AnchorPane>
