--- a/src/jeu/FXML.fxml
+++ b/src/jeu/FXML.fxml
@@ -1,24 +1,69 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.effect.InnerShadow?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="558.0" prefWidth="763.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/23.0.1" fx:controller="jeu.FXMLController">
+<AnchorPane id="AnchorPane" prefHeight="558.0" prefWidth="817.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jeu.FXMLController">
    <children>
-      <Button alignment="CENTER" contentDisplay="CENTER" layoutX="692.0" layoutY="470.0" mnemonicParsing="false" text="Finir" />
-      <Button layoutX="51.0" layoutY="14.0" mnemonicParsing="false" text="&lt;-" />
-      <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" text="Options" />
-      <FlowPane id="cartesJoueurPrincipal" alignment="BOTTOM_LEFT" layoutX="13.0" layoutY="423.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="119.0" prefWidth="646.0" style="-fx-background-color: gray;" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="100.0">
-         <effect>
-            <InnerShadow />
-         </effect>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </FlowPane>
+      <StackPane prefHeight="558.0" prefWidth="817.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <ImageView fitHeight="289.0" fitWidth="292.0" opacity="0.15" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+               <image>
+                  <Image url="@images/fleche.png" />
+               </image>
+            </ImageView>
+            <HBox id="pioche" alignment="CENTER_LEFT" prefHeight="181.5" prefWidth="127.5">
+               <children>
+                  <ImageView fitHeight="181.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/dos.png" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                     <effect>
+                        <Glow level="0.2" />
+                     </effect>
+                  </ImageView>
+               </children>
+               <padding>
+                  <Insets left="200.0" />
+               </padding>
+            </HBox>
+         </children>
+      </StackPane>
+      <Button id="boutonFinir" alignment="CENTER" contentDisplay="CENTER" layoutX="817.0" layoutY="182.0" mnemonicParsing="false" text="Finir" AnchorPane.bottomAnchor="32.0" AnchorPane.rightAnchor="13.0">
+         <graphic>
+            <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" />
+         </graphic>
+      </Button>
+      <Button id="boutonRetour" layoutX="51.0" layoutY="14.0" mnemonicParsing="false" AnchorPane.leftAnchor="55.0" AnchorPane.topAnchor="13.0">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/retour.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <Button id="boutonOptions" layoutX="14.0" layoutY="14.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="28.0" AnchorPane.leftAnchor="13.0" AnchorPane.topAnchor="13.0">
+         <graphic>
+            <ImageView fitHeight="20.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@images/parametres.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
+      <HBox id="cartesJoueurDevant" prefHeight="121.0" prefWidth="400.0" rotate="180.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="-30.0" />
+      <VBox id="cartesJoueurGauche" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="-20.0" AnchorPane.topAnchor="150.0" />
+      <VBox id="cartesJoueurDroit" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="200.0" AnchorPane.rightAnchor="-20.0" AnchorPane.topAnchor="150.0" />
+      <HBox id="cartesJoueurPrincipal" layoutX="28.0" layoutY="412.0" prefHeight="121.0" prefWidth="650.0" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="120.0" />
    </children>
 </AnchorPane>
