--- a/src/jeu/FXML.fxml
+++ b/src/jeu/FXML.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.effect.Glow?>
@@ -13,31 +12,24 @@
 
 <AnchorPane id="AnchorPane" prefHeight="558.0" prefWidth="817.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jeu.FXMLController">
    <children>
-      <StackPane prefHeight="558.0" prefWidth="817.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <StackPane id="fenetre" prefHeight="558.0" prefWidth="817.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <ImageView fitHeight="289.0" fitWidth="292.0" opacity="0.15" pickOnBounds="true" preserveRatio="true" StackPane.alignment="CENTER">
+            <ImageView id="fleche" fitHeight="105.0" fitWidth="292.0" opacity="0.15" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/fleche.png" />
                </image>
             </ImageView>
-            <HBox id="pioche" alignment="CENTER_LEFT" prefHeight="181.5" prefWidth="127.5">
-               <children>
-                  <ImageView fitHeight="181.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
-                     <image>
-                        <Image url="@images/dos.png" />
-                     </image>
-                     <cursor>
-                        <Cursor fx:constant="HAND" />
-                     </cursor>
-                     <effect>
-                        <Glow level="0.2" />
-                     </effect>
-                  </ImageView>
-               </children>
-               <padding>
-                  <Insets left="200.0" />
-               </padding>
-            </HBox>
+            <ImageView id="pioche" fitHeight="181.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-120.0" StackPane.alignment="CENTER">
+               <image>
+                  <Image url="@images/dos.png" />
+               </image>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <effect>
+                  <Glow level="0.2" />
+               </effect>
+            </ImageView>
          </children>
       </StackPane>
       <Button id="boutonFinir" alignment="CENTER" contentDisplay="CENTER" layoutX="817.0" layoutY="182.0" mnemonicParsing="false" text="Finir" AnchorPane.bottomAnchor="32.0" AnchorPane.rightAnchor="13.0">
