--- a/src/jeu/controlleur/FXML.fxml
+++ b/src/jeu/controlleur/FXML.fxml
@@ -19,7 +19,7 @@
                   <Image url="@../images/fleche.png" />
                </image>
             </ImageView>
-            <ImageView id="imagePioche" fx:id="imagePioche" fitHeight="181.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-130.0" StackPane.alignment="CENTER">
+            <ImageView id="imagePioche" fx:id="imagePioche" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="-130.0" StackPane.alignment="CENTER">
                <image>
                   <Image url="@../images/dos.png" />
                </image>
@@ -30,20 +30,27 @@
                   <DropShadow />
                </effect>
             </ImageView>
-            <ImageView id="imagePaquet" fx:id="imagePaquet" fitHeight="181.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" translateX="130.0">
-               <image>
-                  <Image url="@../images/blocagemoteur-vert.png" />
-               </image>
+            <HBox id="paquetBox" fx:id="boxPaquet" alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" prefHeight="200.0" prefWidth="50.0" style="-fx-background-color: gray;" translateX="130.0" StackPane.alignment="CENTER">
+               <children>
+                  <ImageView id="imagePaquet" fx:id="imagePaquet" fitHeight="200.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../images/vide.png" />
+                     </image>
+                     <cursor>
+                        <Cursor fx:constant="HAND" />
+                     </cursor>
+                  </ImageView>
+               </children>
                <cursor>
                   <Cursor fx:constant="HAND" />
                </cursor>
                <effect>
                   <DropShadow />
                </effect>
-            </ImageView>
+            </HBox>
          </children>
       </StackPane>
-      <Button id="boutonFinir" alignment="CENTER" contentDisplay="CENTER" layoutX="817.0" layoutY="182.0" mnemonicParsing="false" text="Finir" AnchorPane.bottomAnchor="32.0" AnchorPane.rightAnchor="13.0">
+      <Button id="boutonFinir" alignment="CENTER" contentDisplay="CENTER" layoutX="817.0" layoutY="182.0" mnemonicParsing="false" text="Finir" AnchorPane.bottomAnchor="32.0" AnchorPane.rightAnchor="25.0">
          <graphic>
             <ImageView fitHeight="70.0" fitWidth="70.0" pickOnBounds="true" preserveRatio="true" />
          </graphic>
@@ -67,6 +74,9 @@
       <HBox id="cartesJoueurDevant" fx:id="paquetJoueurDevant" prefHeight="121.0" prefWidth="400.0" rotate="180.0" AnchorPane.leftAnchor="200.0" AnchorPane.rightAnchor="200.0" AnchorPane.topAnchor="-30.0" />
       <VBox id="cartesJoueurGauche" fx:id="paquetJoueurGauche" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="200.0" AnchorPane.leftAnchor="-20.0" AnchorPane.topAnchor="150.0" />
       <VBox id="cartesJoueurDroit" fx:id="paquetJoueurDroit" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="200.0" AnchorPane.rightAnchor="-20.0" AnchorPane.topAnchor="150.0" />
-      <HBox id="cartesJoueurPrincipal" fx:id="paquetJoueurPrincipal" layoutX="28.0" layoutY="412.0" prefHeight="121.0" prefWidth="650.0" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="13.0" AnchorPane.rightAnchor="120.0" />
+      <HBox id="cartesJoueurPrincipal" fx:id="paquetJoueurPrincipal" layoutX="28.0" layoutY="412.0" prefHeight="121.0" prefWidth="650.0" AnchorPane.bottomAnchor="13.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="150.0">
+         <cursor>
+            <Cursor fx:constant="DEFAULT" />
+         </cursor></HBox>
    </children>
 </AnchorPane>
