--- a/src/jeu/controlleur/FXML.fxml
+++ b/src/jeu/controlleur/FXML.fxml
@@ -9,6 +9,9 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane id="AnchorPane" prefHeight="558.0" prefWidth="817.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="jeu.controlleur.FXMLController">
    <children>
@@ -78,5 +81,15 @@
          <cursor>
             <Cursor fx:constant="DEFAULT" />
          </cursor></HBox>
+      <Rectangle fx:id="carreCouleur" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="50.0" stroke="BLACK" strokeLineJoin="ROUND" strokeType="INSIDE" strokeWidth="0.0" width="50.0" AnchorPane.rightAnchor="45.0" AnchorPane.topAnchor="50.0">
+         <effect>
+            <DropShadow />
+         </effect>
+      </Rectangle>
+      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Couleur actuelle :" textAlignment="RIGHT" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
+         <font>
+            <Font name="Cambria Bold Italic" size="14.0" />
+         </font>
+      </Text>
    </children>
 </AnchorPane>
