--- a/src/jeu/controlleur/FXML.fxml
+++ b/src/jeu/controlleur/FXML.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -91,5 +92,9 @@
             <Font name="Cambria Bold Italic" size="14.0" />
          </font>
       </Text>
+      <Label fx:id="pseudoGauche" alignment="CENTER" contentDisplay="CENTER" AnchorPane.leftAnchor="100.0" AnchorPane.topAnchor="200.0" />
+      <Label fx:id="pseudoDevant" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="90.0" />
+      <Label fx:id="pseudoPrincipal" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" AnchorPane.bottomAnchor="135.0" AnchorPane.leftAnchor="50.0" />
+      <Label fx:id="pseudoDroit" alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" textAlignment="RIGHT" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="200.0" />
    </children>
 </AnchorPane>
